[tool.poetry]
name = "qed-pyqt6gui"
version = "0.1.0"
description = ""
authors = ["Terrance A. Davis <tdavis0525@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5.2"
numpy = "^1.24.3"
pymongo = "^4.3.3"
mayavi = "^4.8.2"
configobj = "^5.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"